# ragithub

./: .gitignore  Cargo.toml  README.md  notice.md
src/: init.rs  main.rs  methods.rs  utils.rs
src/methods/: chunk.rs  file.rs  health.rs  image.rs  proxy.rs  repo.rs
src/models/: file.rs  repo.rs
templates/: base.html  ci-detail.html  repo-index.html
